<resources>
    <string name="app_name">Squirrel</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_register_">Registration</string>
    <string name="title_authorization">Authorization</string>
    <string name="hint_prompt_login">Enter your login</string>
    <string name="hint_prompt_password">Enter your password</string>
    <string name="hint_prompt_confirm_password">Confirm your password</string>
    <string name="button_authorization_text">Sign in</string>
    <string name="button_register_text">Sign up</string>
    <string name="privacy_policy_attention">By pressing this button,
you agree to the User Agreement
and Privacy Policy.
    </string>
    <string name="reg_auth_or"> OR </string>
    <string name="no_have_account_button"><u>Don\'t have a profile yet?</u></string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_piggy_bank">Piggy Bank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>