<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/routes"
    app:startDestination="@id/nav_fragment_statistics">

    <fragment
        android:id="@+id/nav_fragment_piggy_bank"
        android:name="com.example.squirrel.fragment_piggy_bank"
        android:label="@string/title_piggy_bank"
        tools:layout="@layout/fragment_piggy_bank" >

    </fragment>
    <fragment
        android:id="@+id/nav_fragment_statistics"
        android:name="com.example.squirrel.fragment_statistics"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" >

    </fragment>
    <fragment
        android:id="@+id/nav_fragment_transaction"
        android:name="com.example.squirrel.Transaction"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transaction" >

    </fragment>
</navigation>