<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/auth_header_oval"
        android:gravity="center|center"
        android:layout_gravity="top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/google_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/squirell_logo_1"
            android:contentDescription="Squirell"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_small"
            android:text="@string/title_authorization"
            style="@style/text_title_style"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/vertical_margin_medium"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Google authorization"
                android:src="@drawable/google_auth"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/vertical_margin_medium"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:background="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/reg_auth_or"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:background="@android:color/black" />


            </LinearLayout>

            <EditText
                android:id="@+id/loginPrompt"
                style="@style/edit_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_medium"
                android:hint="@string/hint_prompt_login"
                android:inputType="textEmailAddress"
                android:text="admin@nextgenmail.com"/>

            <EditText
                android:id="@+id/passwordPrompt"
                style="@style/edit_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_medium"
                android:hint="@string/hint_prompt_password"
                android:inputType="textPassword"
                android:text="_Aa123456"/>

            <TextView
                android:id="@+id/enterButton"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_medium"
                android:background="@drawable/button"
                android:minWidth="130dp"
                android:minHeight="48dp"
                android:onClick="onClickSignIn"
                android:text="@string/button_authorization_text" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/vertical_margin_medium"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registerLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_medium"
                android:onClick="onClickGoRegister"
                android:text="@string/no_have_account_button"
                android:textAlignment="center"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/text_default_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_medium"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/text_default_size"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>